--- a/face-detection/templates/index.html
+++ b/face-detection/templates/index.html
@@ -59,6 +59,7 @@
         background-color: transparent;
         font-weight: bold;
         text-decoration: none;
+        vertical-align: center;
     }
 
     .button:hover {
@@ -75,8 +76,6 @@
 </style>
 
 <body>
-<<<<<<< HEAD
-<div>
     <nav class="navbar">
         <a class="logo-container">
             <img class="logo" src="jpg/company.jpg">
@@ -85,7 +84,6 @@
             <li class="navbar-li">
                 <a href="#" class="navbar-link button">Live Feed</a>
             </li>
-            <!-- ggf. einsetzen, wenn es noch eine zweite seite geben soll, wo alle detected faces gezeigt werden-->
             <!--<li>
                 <a href="#" class="headline">Image Collection</a>
             </li> -->
@@ -94,21 +92,11 @@
             </li>
         </ul>
     </nav>
-</div>
-
-<div class="container video-container">
-    <div class="row">
-        <div class="col-lg-8  offset-lg-2">
-            <img src="{{ url_for('video_feed') }}" width="100%" height="95%">
-        </div>
-        =======
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8  offset-lg-2">
-                    <h3 class="mt-5">{{ fps }}</h3>
-                    <img src="{{ url_for('face_feed') }}" width="200px" height="200px" >
-                    <img src="{{ url_for('global_feed') }}" width="800px" height="600px" >
-                    >>>>>>> e77ae1b310cee5ff169e182c8c4c446b8fc44b00
-                </div>
+    <div class="container video-container">
+        <div class="row">
+            <div class="col-lg-8  offset-lg-2">
+                <img src="{{ url_for('face_feed') }}" width="100%" height="95%" >
             </div>
+        </div>
+    </div>
 </body>
