--- a/face-detection/templates/index.html
+++ b/face-detection/templates/index.html
@@ -11,6 +11,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        height: 3rem;
     }
 
     .logo-container {
@@ -20,13 +21,14 @@
 
     .logo {
         display: inline-block;
-        width: 10%;
-        height: auto;
+        width: 7rem;
+        height: 3rem;
     }
 
     .navbar-ul {
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
         margin: 0;
-        padding: 0;
         text-align: center;
         flex-grow: 1;
     }
@@ -78,24 +80,31 @@
 <body>
     <nav class="navbar">
         <a class="logo-container">
-            <img class="logo" src="jpg/company.jpg">
+            <svg fill="#ffff" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" class="logo">
+                <defs>
+                    <clipPath id="dddivided-clip1"><rect width="50%" height="100%" x="0" y="0"></rect></clipPath>
+                    <clipPath id="dddivided-clip2"><rect width="50%" height="100%" x="50%" y="0"></rect></clipPath>
+                </defs>
+                <path fill="#5AC4F6" clip-path="url(#dddivided-clip1)" transform="translate(-10,-10)" d="m73.8 139.715-15.349-47.24c6.102 2.549 11.426 4.246 16.06 4.881 5.42.743 10.025.05 13.818-2.552 3.764-2.583 6.5-6.891 8.534-12.896 1.339-3.95 2.396-8.7 3.235-14.304 1.256 5.623 2.654 10.38 4.255 14.327 2.42 5.965 5.357 10.215 9.1 12.765 3.786 2.579 8.201 3.287 13.277 2.553 4.218-.61 8.949-2.222 14.269-4.63l-15.302 47.096H73.8Z"/><path clip-path="url(#dddivided-clip2)" d="m73.8 139.715-15.349-47.24c6.102 2.549 11.426 4.246 16.06 4.881 5.42.743 10.025.05 13.818-2.552 3.764-2.583 6.5-6.891 8.534-12.896 1.339-3.95 2.396-8.7 3.235-14.304 1.256 5.623 2.654 10.38 4.255 14.327 2.42 5.965 5.357 10.215 9.1 12.765 3.786 2.579 8.201 3.287 13.277 2.553 4.218-.61 8.949-2.222 14.269-4.63l-15.302 47.096H73.8Z"/>
+            </svg>
         </a>
         <ul class="navbar-ul">
             <li class="navbar-li">
                 <a href="#" class="navbar-link button">Live Feed</a>
             </li>
-            <!--<li>
-                <a href="#" class="headline">Image Collection</a>
-            </li> -->
+            <li class="navbar-li">
+                <a href="./history.html" class="navbar-link button">Image History</a>
+            </li>
             <li class="navbar-li">
                 <a href="https://mahara.itech-bs14.de/view/view.php?id=22984" class="navbar-link button">About Us</a>
             </li>
         </ul>
     </nav>
+
     <div class="container video-container">
         <div class="row">
             <div class="col-lg-8  offset-lg-2">
-                <img src="{{ url_for('face_feed') }}" width="100%" height="95%" >
+                <img src="{{ url_for('global_feed') }}" width="100%" height="90%" >
             </div>
         </div>
     </div>
