--- a/face-detection/templates/index.html
+++ b/face-detection/templates/index.html
@@ -2,12 +2,13 @@
     body {
         margin: 0;
         font-family: Arial;
+        background-color: black;
     }
 
     .navbar {
         padding-top: 0.25rem;
         padding-bottom: 0.25rem;
-        background-color: rgb(119, 160, 220);
+        background-color: rgb(226,29,60);
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -56,7 +57,7 @@
 
     .button {
         display: inline-block;
-        color: white;
+        color: darkgray;
         padding: 0.75rem 2rem;
         background-color: transparent;
         font-weight: bold;
@@ -65,7 +66,7 @@
     }
 
     .button:hover {
-        background-color: rgb(125, 180, 250, 0.35)
+        background-color: rgb(226,29,60, 0.35)
     }
 
     .video-container {
