--- a/face-detection/templates/index.html
+++ b/face-detection/templates/index.html
@@ -105,7 +105,7 @@
     <div class="container video-container">
         <div class="row">
             <div class="col-lg-8  offset-lg-2">
-                <img src="{{ url_for('global_feed') }}" width="100%" height="90%" >
+                <img src="{{ url_for('global_feed') }}" width="1200px" height="900px" >
             </div>
         </div>
     </div>
