--- a/face-detection/templates/index.html
+++ b/face-detection/templates/index.html
@@ -91,10 +91,10 @@
         </a>
         <ul class="navbar-ul">
             <li class="navbar-li">
-                <a href="#" class="navbar-link button">Live Feed</a>
+                <a href="http://127.0.0.1:5000" class="navbar-link button">Live Feed</a>
             </li>
             <li class="navbar-li">
-                <a href="./history.html" class="navbar-link button">Image History</a>
+                <a href="http://127.0.0.1:5000/history" class="navbar-link button">Image History</a>
             </li>
             <li class="navbar-li">
                 <a href="https://mahara.itech-bs14.de/view/view.php?id=22984" class="navbar-link button">About Us</a>
