--- a/face-detection/templates/history2.html
+++ b/face-detection/templates/history2.html
@@ -1,79 +1,8 @@
-<style>
-  body {
-    font-family: Arial;
-    margin: 0;
-  }
-
-  .navbar {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-    background-color: rgb(119, 160, 220);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 3rem;
-    margin-bottom: 3rem;
-  }
-
-  .logo-container {
-    padding-left: 2rem;
-    flex-grow: 2;
-  }
-
-  .logo {
-    display: inline-block;
-    width: 7rem;
-    height: 3rem;
-  }
-
-  .navbar-ul {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-    margin: 0;
-    text-align: center;
-    flex-grow: 1;
-  }
-
-  .navbar-li {
-    display: inline-block;
-    list-style-type: none;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-  }
-
-  .navbar-li:hover {
-    transform: scale(1.05);
-    text-shadow: 0 0 1rem rgba(255, 255, 255, 0.9);
-  }
-
-  .navbar-link {
-    font-weight: bold;
-    display: block;
-    color: white;
-    text-decoration: none;
-    padding: 1rem 1rem;
-    text-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
-  }
-
-  .button {
-    display: inline-block;
-    color: white;
-    padding: 0.75rem 2rem;
-    background-color: transparent;
-    font-weight: bold;
-    text-decoration: none;
-    vertical-align: center;
-  }
-
-  .button:hover {
-    background-color: rgb(125, 180, 250, 0.35)
-  }
-
-  .image_card {
-    background-color: rgb(119, 160, 220);
-
-  }
-</style>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 
 <body>
   <nav class="navbar">
