--- a/face-detection/static/styles.css
+++ b/face-detection/static/styles.css
@@ -4,10 +4,29 @@ body {
     background-color: black;
 }
 
+/* Style for the list item container */
+.list-item {
+    display: flex;
+    align-items: center;
+}
+
+/* Style for the image */
+.list-item img {
+    width: 100px;
+    height: 100px;
+    margin-right: 10px; /* Add some spacing between the image and text */
+}
+
+/* Style for the multiline text field */
+.list-item textarea {
+    width: 400px;
+    height: 100px;
+}
+
 .navbar {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
-    background-color: rgb(226,29,60);
+    background-color: rgb(226, 29, 60);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -65,7 +84,7 @@ body {
 }
 
 .button:hover {
-    background-color: rgb(226,29,60, 0.35)
+    background-color: rgb(226, 29, 60, 0.35)
 }
 
 .video-container {
@@ -75,7 +94,6 @@ body {
     padding-left: 1rem;
     padding-right: 1rem;
 }
-
 
 
 .history_nav-margin {
@@ -96,7 +114,7 @@ body {
     padding-bottom: 2rem;
     margin: 1rem;
     text-align: left;
-    background-color: rgb(226,29,60);
+    background-color: rgb(226, 29, 60);
     flex: 0 0 22.3333rem;
     border-radius: 1rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.25);
@@ -127,8 +145,6 @@ body {
 }
 
 
-
-
 .image_card {
-    background-color: rgb(226,29,60);
+    background-color: rgb(226, 29, 60);
 }
