--- a/face-detection/templates/history.html
+++ b/face-detection/templates/history.html
@@ -32,10 +32,8 @@
         <div class="row history_card">
             <div class="col-lg-8  offset-lg-2">
                 <h3 class="mt-5"></h3>
-                <img src="{{data | safe}}" class="history_image" width="50%">
                 <ul class="history_list">
-                    <li>abc</li>
-                    <li>def</li>
+                    {{data | safe}}
                 </ul>
             </div>
         </div>
