--- a/face-detection/templates/index.html
+++ b/face-detection/templates/index.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-lg-8  offset-lg-2">
                 <img src="{{ url_for('global_feed') }}" width="1200px" height="900px" >
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2373.250348393779!2d10.000299712735657!3d53.499723163120436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18e247b716e69%3A0xa79226ab946c2160!2sBerufliche%20Schule%20ITECH%20Elbinsel%20Wilhelmsburg%20(BS14)!5e0!3m2!1sde!2sde!4v1696788163919!5m2!1sde!2sde" width="620" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2373.250348393779!2d10.000299712735657!3d53.499723163120436!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47b18e247b716e69%3A0xa79226ab946c2160!2sBerufliche%20Schule%20ITECH%20Elbinsel%20Wilhelmsburg%20(BS14)!5e0!3m2!1sde!2sde!4v1696788163919!5m2!1sde!2sde" width="555px" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
